fix resizing, toggling, collapse, and expand panes

--- a/src/frontend/public/style/views/panes.css
+++ b/src/frontend/public/style/views/panes.css
@@ -13,18 +13,18 @@
     z-index: 2;
 }
 
-.dragbar:before {
+.dragbar:before, .dragbar:after {
     position: absolute;
-    margin-top: 15%;
     content: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5' height='18'%3E%3Cpath d='M2 0h3v3H2zm0 5h3v3H2zm0 5h3v3H2zm0 5h3v3H2z' style='fill:%239da7b7'/%3E%3C/svg%3E");
     box-sizing: border-box;
 }
 
+.dragbar:before {
+    margin-top: calc(15% - 9px);
+}
+
 .dragbar:after {
-    position: absolute;
-    margin-top: 62%;
-    content: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5' height='18'%3E%3Cpath d='M2 0h3v3H2zm0 5h3v3H2zm0 5h3v3H2zm0 5h3v3H2z' style='fill:%239da7b7'/%3E%3C/svg%3E");
-    box-sizing: border-box;
+    margin-top: calc(85% - 9px);
 }
 
 /* the logic for resizing the split inside panes is in panes.js */
@@ -35,15 +35,19 @@
     width: 100%;
     cursor: s-resize;
     z-index: 1;
+    container-type: inline-size;
+    container-name: split-dragbar;
 }
 
-.split-dragbar:after {
-    position: absolute;
-    content: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='5'%3E%3Cpath d='M0 1.5h3v3H0zm5 0h3v3H5zm5 0h3v3h-3zm5 0h3v3h-3z' style='fill:%239da7b7'/%3E%3C/svg%3E");
-    box-sizing: border-box;
-    display: block;
-    line-height: 0;
-    margin-left: 48%;
+@container split-dragbar (min-width: 18px) { 
+    .split-dragbar:after {
+        position: absolute;
+        content: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='5'%3E%3Cpath d='M0 1.5h3v3H0zm5 0h3v3H5zm5 0h3v3h-3zm5 0h3v3h-3z' style='fill:%239da7b7'/%3E%3C/svg%3E");
+        box-sizing: border-box;
+        display: block;
+        line-height: 0;
+        margin-left: calc(50% - 9px);
+    }
 }
 
 .split-dragbar:hover {
